--- a/program-registration.html
+++ b/program-registration.html
@@ -44,10 +44,10 @@
                         </li>
                         <li><a>Menu ▼ </a>
                             <ul class="dropdown mobile-menu">
-                                <li class="active"><a href="./index.html">Home</a></li>
+                                <li><a href="./index.html">Home</a></li>
+                                <li><a href="./exhibitor.html">Exhibit 2024</a></li>
                                 <li><a href="./hackathon.html">Hackathon</a></li>
                                 <li><a href="./sti-award.html">STI Award</a></li>
-                                <!-- <li><a href="./speaker.html">Exhibitor</a></li> -->
                                 <li><a href="./sponsors.html">Sponsors</a></li>
                                 <li><a href="./about-us.html">About</a></li>
                             </ul>
@@ -85,12 +85,13 @@
                         <select id="sector" class="form-control"
                             style="background-color: #f4f6f8; border-color: #f4f6f8; height: 50px;" required>
                             <option value="">Select Company Sector</option>
-                            <option value="manager">Telecommunications</option>
-                            <option value="assistant">Fintech</option>
-                            <option value="volunteer">Software Development and IT Solutions</option>
-                            <option value="assistant">Digital Services and E-commerce</option>
-                            <option value="assistant">Innovation and Research Labs</option>
-                            <option value="assistant">Incubators and Accelerators</option>
+                            <option value="Telecommunications">Telecommunications</option>
+                            <option value="Fintech">Fintech</option>
+                            <option value="Software Development and IT Solutions">Software Development and IT Solutions</option>
+                            <option value="Digital Services and E-commerce">Digital Services and E-commerce</option>
+                            <option value="Innovation and Research Labs">Innovation and Research Labs</option>
+                            <option value="Incubators and Accelerators">Incubators and Accelerators</option>
+                            <option value="Other">Other</option>
                         </select>
                     </div>
                     <div class="col-lg-6">
