--- a/sponsors.html
+++ b/sponsors.html
@@ -39,7 +39,8 @@
                 <nav class="mainmenu">
                     <ul>
                         <li>
-                            <p class="primary" onclick="window.open('./program-registration.html', '_blank');">Register Interest
+                            <p class="primary" onclick="window.open('./program-registration.html', '_blank');">Register
+                                Interest
                             </p>
                         </li>
                         <li>
@@ -48,10 +49,10 @@
                         <li><a>Menu ▼ </a>
                             <ul class="dropdown mobile-menu">
                                 <li><a href="./index.html">Home</a></li>
+                                <li><a href="./program-registration.html">Register Interest</a></li>
+                                <li><a href="./exhibitor.html">Exhibit 2024</a></li>
                                 <li><a href="./hackathon.html">Hackathon</a></li>
                                 <li><a href="./sti-award.html">STI Award</a></li>
-                                <!-- <li><a href="./speaker.html">Exhibitor</a></li> -->
-                                <li class="active"><a href="./sponsors.html">Sponsors</a></li>
                                 <li><a href="./about-us.html">About</a></li>
                             </ul>
                         </li>
@@ -86,30 +87,6 @@
     <section class="speaker-section spad">
         <div class="container">
             <div class="row">
-                <!-- <div class="col-sm-6">
-                    <div class="speaker-item">
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <div class="si-pic">
-                                    <img src="img/speakers/safaricom.png" alt="">
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="si-text">
-                                    <div class="si-title">
-                                        <h4>Safaricom Ethiopia</h4>
-                                        <span>Telecom</span>
-                                    </div>
-                                    <div class="si-social">
-                                        <a href="#"><i class="fa fa-facebook"></i></a>
-                                        <a href="#"><i class="fa fa-twitter"></i></a>
-                                        <a href="#"><i class="fa fa-google-plus"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 <div class="col-sm-6">
                     <div class="speaker-item">
                         <div class="row">
@@ -122,58 +99,77 @@
                                 <div class="si-text">
                                     <div class="si-title">
                                         <h4>EthioTelecom</h4>
-                                        <span>Telecom</span>
-                                    </div>
-                                    <div class="si-social">
-                                        <a href="#"><i class="fa fa-facebook"></i></a>
-                                        <a href="#"><i class="fa fa-twitter"></i></a>
-                                        <a href="#"><i class="fa fa-google-plus"></i></a>
+                                        <span>Diamond Level Sponsor </span>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div> -->
+                </div>
+                <div class="col-sm-6">
+                    <div class="speaker-item">
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="si-pic">
+                                    <img src="img/speakers/osc.png" alt="">
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="si-text">
+                                    <div class="si-title">
+                                        <h4>OSC</h4>
+                                        <span>Platinum level sponsor </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="speaker-item">
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="si-pic">
+                                    <img src="img/speakers/huawei.png" alt="">
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="si-text">
+                                    <div class="si-title">
+                                        <h4>Huawei</h4>
+                                        <span>Gold Level Sponsor</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="speaker-item">
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="si-pic">
+                                    <img src="img/speakers/safaricom.png" alt="">
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="si-text">
+                                    <div class="si-title">
+                                        <h4>Safaricom Ethiopia</h4>
+                                        <span>Gold Level Sponsor</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
     <!-- Speaker Section End -->
 
-    <!-- Footer Section Begin -->
     <footer class="footer-section">
         <div class="container">
-            <div class="partner-logo owl-carousel">
-                <a href="#" class="pl-table">
-                    <div class="pl-tablecell">
-                        <img src="img/partner-logo/logo-1.png" alt="">
-                    </div>
-                </a>
-                <a href="#" class="pl-table">
-                    <div class="pl-tablecell">
-                        <img src="img/partner-logo/logo-2.png" alt="">
-                    </div>
-                </a>
-                <a href="#" class="pl-table">
-                    <div class="pl-tablecell">
-                        <img src="img/partner-logo/logo-3.png" alt="">
-                    </div>
-                </a>
-                <a href="https://techethio.com/" target="_blank" class="pl-table">
-                    <div class="pl-tablecell">
-                        <img src="img/partner-logo/logo-4.png" alt="">
-                    </div>
-                </a>
-                <a href="#" class="pl-table">
-                    <div class="pl-tablecell">
-                        <img src="img/partner-logo/logo-5.png" alt="">
-                    </div>
-                </a>
-                <a href="#" class="pl-table">
-                    <div class="pl-tablecell">
-                        <img src="img/partner-logo/logo-6.png" alt="">
-                    </div>
-                </a>
-            </div>
             <div class="row">
                 <div class="col-lg-12">
                     <div class="footer-text">
