--- a/about-us.html
+++ b/about-us.html
@@ -48,11 +48,11 @@
                         <li><a>Menu ▼ </a>
                             <ul class="dropdown mobile-menu">
                                 <li><a href="./index.html">Home</a></li>
+                                <li><a href="./program-registration.html">Register Interest</a></li>
+                                <li><a href="./exhibitor.html">Exhibit 2024</a></li>
                                 <li><a href="./hackathon.html">Hackathon</a></li>
                                 <li><a href="./sti-award.html">STI Award</a></li>
-                                <!-- <li><a href="./speaker.html">Exhibitor</a></li> -->
                                 <li><a href="./sponsors.html">Sponsors</a></li>
-                                <li class="active"><a href="./about-us.html">About</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -137,7 +137,7 @@
                             </li>
                             <li><span class="icon_check"></span>⁠ Educating attendees on emerging trends and best
                                 practices.</li>
-                            <li><span class="icon_check"></span> Hosting STI Award, recognizing outstanding
+                            <li><span class="icon_check"></span> Hosting STRIDE Award, recognizing outstanding
                                 contributions to national development.</li>
                         </ul>
                     </div>
@@ -253,6 +253,21 @@
                 <a href="https://techethio.com/" target="_blank" class="pl-table">
                     <div class="pl-tablecell">
                         <img src="img/partner-logo/logo-4.png" alt="">
+                    </div>
+                </a>
+                <a href="#" class="pl-table">
+                    <div class="pl-tablecell">
+                        <img src="img/speakers/ethiotelecom.png" alt="">
+                    </div>
+                </a>
+                <a href="#" class="pl-table">
+                    <div class="pl-tablecell">
+                        <img src="img/speakers/safaricom.png" alt="">
+                    </div>
+                </a>
+                <a href="#" class="pl-table">
+                    <div class="pl-tablecell">
+                        <img src="img/speakers/huawei.png" alt="">
                     </div>
                 </a>
             </div>
