--- a/hackathon.html
+++ b/hackathon.html
@@ -48,9 +48,9 @@
                         <li><a>Menu ▼ </a>
                             <ul class="dropdown mobile-menu">
                                 <li><a href="./index.html">Home</a></li>
-                                <li class="active"><a href="./hackathon.html">Hackathon</a></li>
+                                <li><a href="./program-registration.html">Register Interest</a></li>
+                                <li><a href="./exhibitor.html">Exhibit 2024</a></li>
                                 <li><a href="./sti-award.html">STI Award</a></li>
-                                <!-- <li><a href="./speaker.html">Exhibitor</a></li> -->
                                 <li><a href="./sponsors.html">Sponsors</a></li>
                                 <li><a href="./about-us.html">About</a></li>
                             </ul>
