--- a/schedule.html
+++ b/schedule.html
@@ -44,11 +44,11 @@
                         <li><a>Menu ▼ </a>
                             <ul class="dropdown mobile-menu">
                                 <li><a href="./index.html">Home</a></li>
-                                
-                                <!-- <li><a href="./speaker.html">Speakers</a></li> -->
-                                <li class="active"><a href="./schedule.html">Agenda</a></li>
-                                <li><a href="#">Exhibitor</a></li>
-                                <li><a href="#">Sponsors</a></li>
+                                <li><a href="./program-registration.html">Register Interest</a></li>
+                                <li><a href="./exhibitor.html">Exhibit 2024</a></li>
+                                <li><a href="./hackathon.html">Hackathon</a></li>
+                                <li><a href="./sti-award.html">STI Award</a></li>
+                                <li><a href="./sponsors.html">Sponsors</a></li>
                                 <li><a href="./about-us.html">About</a></li>
                             </ul>
                         </li>
