--- a/sti-award.html
+++ b/sti-award.html
@@ -48,9 +48,9 @@
                         <li><a>Menu ▼ </a>
                             <ul class="dropdown mobile-menu">
                                 <li><a href="./index.html">Home</a></li>
-                                <li class="active"><a href="./hackathon.html">Hackathon</a></li>
-                                <li><a href="./sti-award.html">STI Award</a></li>
-                                <li><a href="./exhibitor.html">Exhibitor</a></li>
+                                <li><a href="./program-registration.html">Register Interest</a></li>
+                                <li><a href="./exhibitor.html">Exhibit 2024</a></li>
+                                <li><a href="./hackathon.html">Hackathon</a></li>
                                 <li><a href="./sponsors.html">Sponsors</a></li>
                                 <li><a href="./about-us.html">About</a></li>
                             </ul>
@@ -70,7 +70,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumb-text">
-                        <h2>STI Award</h2>
+                        <h2>STRIDE Award</h2>
                     </div>
                 </div>
             </div>
