Program reg update

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <nav class="mainmenu">
                     <ul>
                         <li>
-                            <p class="primary" onclick="window.open('./program-registration.html');">Register Interest
+                            <p class="primary" onclick="window.location.href='./program-registration.html';">Register Interest
                             </p>
                         </li>
                         <li>
