--- a/about-us.html
+++ b/about-us.html
@@ -51,7 +51,7 @@
                                 <li><a href="./program-registration.html">Register Interest</a></li>
                                 <li><a href="./exhibitor.html">Exhibit 2024</a></li>
                                 <li><a href="./hackathon.html">Hackathon</a></li>
-                                <li><a href="./sti-award.html">STI Award</a></li>
+                                <li><a href="./stride-award.html">STRIDE Award</a></li>
                                 <li><a href="./sponsors.html">Sponsors</a></li>
                             </ul>
                         </li>
@@ -263,6 +263,11 @@
                 <a href="#" class="pl-table">
                     <div class="pl-tablecell">
                         <img src="img/speakers/safaricom.png" alt="">
+                    </div>
+                </a>
+                <a href="#" class="pl-table">
+                    <div class="pl-tablecell">
+                        <img src="img/speakers/osc.png" alt="">
                     </div>
                 </a>
                 <a href="#" class="pl-table">
