--- a/hackathon.html
+++ b/hackathon.html
@@ -39,7 +39,7 @@
                 <nav class="mainmenu">
                     <ul>
                         <li>
-                            <p class="primary" onclick="window.open('./program-registration.html', '_blank');">Register Interest
+                            <p class="primary" onclick="window.location.href='./program-registration.html';">Register Interest
                             </p>
                         </li>
                         <li>
@@ -50,7 +50,7 @@
                                 <li><a href="./index.html">Home</a></li>
                                 <li><a href="./program-registration.html">Register Interest</a></li>
                                 <li><a href="./exhibitor.html">Exhibit 2024</a></li>
-                                <li><a href="./sti-award.html">STI Award</a></li>
+                                <li><a href="./stride-award.html">STRIDE Award</a></li>
                                 <li><a href="./sponsors.html">Sponsors</a></li>
                                 <li><a href="./about-us.html">About</a></li>
                             </ul>
@@ -211,6 +211,26 @@
                 <a href="https://techethio.com/" target="_blank" class="pl-table">
                     <div class="pl-tablecell">
                         <img src="img/partner-logo/logo-4.png" alt="">
+                    </div>
+                </a>
+                <a href="#" class="pl-table">
+                    <div class="pl-tablecell">
+                        <img src="img/speakers/ethiotelecom.png" alt="">
+                    </div>
+                </a>
+                <a href="#" class="pl-table">
+                    <div class="pl-tablecell">
+                        <img src="img/speakers/safaricom.png" alt="">
+                    </div>
+                </a>
+                <a href="#" class="pl-table">
+                    <div class="pl-tablecell">
+                        <img src="img/speakers/osc.png" alt="">
+                    </div>
+                </a>
+                <a href="#" class="pl-table">
+                    <div class="pl-tablecell">
+                        <img src="img/speakers/huawei.png" alt="">
                     </div>
                 </a>
             </div>
