--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                 <li><a href="./program-registration.html">Register Interest</a></li>
                                 <li><a href="./exhibitor.html">Exhibit 2024</a></li>
                                 <li><a href="./hackathon.html">Hackathon</a></li>
-                                <li><a href="./sti-award.html">STI Award</a></li>
+                                <li><a href="./stride-award.html">STRIDE Award</a></li>
                                 <li><a href="./sponsors.html">Sponsors</a></li>
                                 <li><a href="./about-us.html">About</a></li>
                             </ul>
@@ -98,7 +98,7 @@
                         <div class="row">
                             <div class="col-lg-10">
                                 <div class="hero-text">
-                                    <h2>Hosting the prestigious STI Award, recognizing
+                                    <h2>Hosting the prestigious STRIDE Award, recognizing
                                         outstanding contributions to national development</h2>
                                 </div>
                             </div>
@@ -256,13 +256,13 @@
                         <div class="tr-tag">
                             <i class="fa fa-star"></i>
                         </div>
-                        <h4>STI Award</h4>
+                        <h4>STRIDE Award</h4>
                         <div class="pi-price">
                             <h2><span></span></h2>
                         </div>
                         <p style="padding-left: 50px; padding-right: 50px; text-align: justify;">Do you know a
                             groundbreaking mind or a revolutionary project and organization that deserves
-                            recognition? The STI Award 2024 celebrate the remarkable achievements of individuals, teams,
+                            recognition? The STRIDE Award 2024 celebrate the remarkable achievements of individuals, teams,
                             and organization who are pushing the boundaries of science, technology, and innovation.
                         </p>
                         <br />
@@ -271,7 +271,7 @@
                             <li>- Lifetime Achievement Award</li>
                             <li>- The Best Digitally Enabled Institutions Award</li>
                             <li>- Research Excellence Award</li>
-                            <li>- STI Excellence Award (under the categories of Youth, Women, & Person with
+                            <li>- STRIDEExcellence Award (under the categories of Youth, Women, & Person with
                                 Disabilities)
                             </li>
                             <li>- Technological Innovation Award (honors the development of a new and impactful
@@ -414,6 +414,11 @@
                 <a href="#" class="pl-table">
                     <div class="pl-tablecell">
                         <img src="img/speakers/safaricom.png" alt="">
+                    </div>
+                </a>
+                <a href="#" class="pl-table">
+                    <div class="pl-tablecell">
+                        <img src="img/speakers/osc.png" alt="">
                     </div>
                 </a>
                 <a href="#" class="pl-table">
@@ -641,7 +646,7 @@
                         time: '05:00 PM - 09:00 PM',
                         location: 'Adwa Museum Addis Ababa, Ethiopia',
                         image: 'img/schedule/schedule.jpg',
-                        description: 'STI Award Ceremony.',
+                        description: 'STRIDE Award Ceremony.',
                     }
                 ],
             }
