--- a/sponsors.html
+++ b/sponsors.html
@@ -52,7 +52,7 @@
                                 <li><a href="./program-registration.html">Register Interest</a></li>
                                 <li><a href="./exhibitor.html">Exhibit 2024</a></li>
                                 <li><a href="./hackathon.html">Hackathon</a></li>
-                                <li><a href="./sti-award.html">STI Award</a></li>
+                                <li><a href="./stride-award.html">STRIDE Award</a></li>
                                 <li><a href="./about-us.html">About</a></li>
                             </ul>
                         </li>
