--- a/stride-award.html
+++ b/stride-award.html
@@ -108,7 +108,7 @@
                 <div class="col-lg-6">
                     <div class="blog-item set-bg large-item" data-setbg="img/blog/image-4.png">
                         <div class="bi-text">
-                            <h3>STI Excellence Award (under the categories of Youth, Women, & Person with Disabilities)</h3>
+                            <h3>STRIDEExcellence Award (under the categories of Youth, Women, & Person with Disabilities)</h3>
                         </div>
                     </div>
                     <div class="row">
@@ -142,6 +142,26 @@
                 <a href="https://techethio.com/" target="_blank" class="pl-table">
                     <div class="pl-tablecell">
                         <img src="img/partner-logo/logo-4.png" alt="">
+                    </div>
+                </a>
+                <a href="#" class="pl-table">
+                    <div class="pl-tablecell">
+                        <img src="img/speakers/ethiotelecom.png" alt="">
+                    </div>
+                </a>
+                <a href="#" class="pl-table">
+                    <div class="pl-tablecell">
+                        <img src="img/speakers/safaricom.png" alt="">
+                    </div>
+                </a>
+                <a href="#" class="pl-table">
+                    <div class="pl-tablecell">
+                        <img src="img/speakers/osc.png" alt="">
+                    </div>
+                </a>
+                <a href="#" class="pl-table">
+                    <div class="pl-tablecell">
+                        <img src="img/speakers/huawei.png" alt="">
                     </div>
                 </a>
             </div>
