--- a/about-us.html
+++ b/about-us.html
@@ -48,7 +48,7 @@
                         <li><a>Menu ▼ </a>
                             <ul class="dropdown mobile-menu">
                                 <li><a href="./index.html">Home</a></li>
-                                <li><a href="./program-registration.html">Register Interest</a></li>
+                                <li><a href="https://bit.ly/STRIDEExpo2024">Register Interest</a></li>
                                 <li><a href="./exhibitor.html">Exhibit 2024</a></li>
                                 <li><a href="./hackathon.html">Hackathon</a></li>
                                 <li><a href="./stride-award.html">STRIDE Award</a></li>
