--- a/hackathon.html
+++ b/hackathon.html
@@ -39,7 +39,7 @@
                 <nav class="mainmenu">
                     <ul>
                         <li>
-                            <p class="primary" onclick="window.location.href='./program-registration.html';">Register Interest
+                            <p class="primary" onclick="window.location.href='https://bit.ly/STRIDEExpo2024';">Register Interest
                             </p>
                         </li>
                         <li>
@@ -48,7 +48,7 @@
                         <li><a>Menu ▼ </a>
                             <ul class="dropdown mobile-menu">
                                 <li><a href="./index.html">Home</a></li>
-                                <li><a href="./program-registration.html">Register Interest</a></li>
+                                <li><a href="https://bit.ly/STRIDEExpo2024">Register Interest</a></li>
                                 <li><a href="./exhibitor.html">Exhibit 2024</a></li>
                                 <li><a href="./stride-award.html">STRIDE Award</a></li>
                                 <li><a href="./sponsors.html">Sponsors</a></li>
