--- a/sponsors.html
+++ b/sponsors.html
@@ -39,7 +39,7 @@
                 <nav class="mainmenu">
                     <ul>
                         <li>
-                            <p class="primary" onclick="window.open('./program-registration.html', '_blank');">Register
+                            <p class="primary" onclick="window.location.href='https:\/\/bit.ly/STRIDEExpo2024';">Register
                                 Interest
                             </p>
                         </li>
@@ -49,7 +49,7 @@
                         <li><a>Menu ▼ </a>
                             <ul class="dropdown mobile-menu">
                                 <li><a href="./index.html">Home</a></li>
-                                <li><a href="./program-registration.html">Register Interest</a></li>
+                                <li><a href="https://bit.ly/STRIDEExpo2024">Register Interest</a></li>
                                 <li><a href="./exhibitor.html">Exhibit 2024</a></li>
                                 <li><a href="./hackathon.html">Hackathon</a></li>
                                 <li><a href="./stride-award.html">STRIDE Award</a></li>
